# slip39-rust

./: Cargo.toml  README.md
src/: main.rs  master_secret.rs  slip39.rs
